force-app/main/default/objects/GSquare_Arena_Baseline__c/GSquare_Arena_Baseline__c.object-meta.xml
<CustomObject>
    <description
  >Nightly "typical day" baselines for the Sales Arena zone TV wall. Written by GSquareArenaBaselineJob; read by GSquareSalesArenaService.</description>
    <label>Arena Baseline</label>
    <pluralLabel>Arena Baselines</pluralLabel>
    <nameField>
        <label>Baseline Name</label>
        <type>AutoNumber</type>
        <displayFormat>ARB-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>