force-app/main/default/objects/GSquare_Arena_Baseline__c/fields/Day_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Month__c</fullName>
    <label>Day Of Month</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>