force-app/main/default/objects/GSquare_Arena_Baseline__c/fields/Hour__c.field-meta.xml
<CustomField>
    <fullName>Hour__c</fullName>
    <label>Hour</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>