force-app/main/default/objects/GSquare_Arena_Baseline__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
    <description
  >HOURLY = typical cumulative count by end of hour; MTD = last month to-date total.</description>
</CustomField>