force-app/main/default/objects/GSquare_Arena_Baseline__c/fields/Metric_Key__c.field-meta.xml
<CustomField>
    <fullName>Metric_Key__c</fullName>
    <label>Metric Key</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>