force-app/main/default/objects/GSquare_Arena_Baseline__c/fields/Scope_Key__c.field-meta.xml
<CustomField>
    <fullName>Scope_Key__c</fullName>
    <label>Scope Key</label>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
</CustomField>