force-app/main/default/objects/GSquare_Arena_Baseline__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <label>Unique Key</label>
    <type>Text</type>
    <length>200</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <required>true</required>
</CustomField>