force-app/main/default/objects/GSquare_Arena_Baseline__c/fields/Weekday__c.field-meta.xml
<CustomField>
    <fullName>Weekday__c</fullName>
    <label>Weekday</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
    <description>1 = Monday ... 7 = Sunday (HOURLY rows).</description>
</CustomField>